Mon Jun  2 19:47:16 2008  Akinori MUSHA  <knu@iDaemons.org>

	* lib/delegate.rb (DelegateClass, Delegator#respond_to?):
	  respond_to? must take optional second argument.  This was a
	  latent bug exposed by a recent internal change of marshal.c to
	  call respond_to? with a second argument; submitted by Jeremy
	  Kemper <jeremy at bitsweat.net> in [ruby-core:17045].

Sat May 31 23:53:35 2008  Akinori MUSHA  <knu@iDaemons.org>

	* .: Release as Ruby 1.8.7.

Sat May 31 23:33:34 2008  Akinori MUSHA  <knu@iDaemons.org>

	* README, README.ja: Add a note about default C flags.

Sat May 31 22:11:15 2008  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* version.c (ruby_description, ruby_copyright): backported from
	  1.9. bug#19002, [ruby-dev:34883]

	* error.c (report_bug): uses ruby_description.

Sat May 31 20:56:04 2008  Akinori MUSHA  <knu@iDaemons.org>

	* array.c (rb_ary_delete_if): should return enumerator if no block
	  is given.  [ruby-dev:34901]

Sat May 31 18:28:17 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* suppress warnings with -Wwrite-string.

Sat May 31 15:58:08 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in, configure.in (warnflags): defaulted to -Wall
	  -Wno-parentheses with gcc.  [ruby-dev:34810]

Fri May 30 05:28:18 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* enum.c (count_i, count_iter_i, count_all_i): add prototypes for VC.

Fri May 30 04:32:07 2008  Akinori MUSHA  <knu@iDaemons.org>

	* enum.c (count_i, count_iter_i): Sync with trunk.
	  enum.c (enum_count, count_all_i, Init_Enumerable),
	  array.c (rb_ary_count): Sync with trunk.  If no argument or
	  block is given, count the number of all elements.

Fri May 30 03:12:18 2008  Akinori MUSHA  <knu@iDaemons.org>

	* ext/openssl/ossl_bn.c (ossl_bn_s_rand, ossl_bn_s_pseudo_rand):
	  Int should be enough here.

Fri May 30 02:35:00 2008  Akinori MUSHA  <knu@iDaemons.org>

	* ext/openssl/ossl_bn.c (ossl_bn_s_rand, ossl_bn_s_pseudo_rand),
	  ext/openssl/ossl_pkey_dh.c (ossl_dh_s_generate)